# Rust-crash-course

./: .gitignore  README.md
closure_threads/: Cargo.toml
closure_threads/src/: main.rs
closures_iterators/src/: main.rs
collections_enums/: Cargo.toml
collections_enums/src/: main.rs
control_flow_strings/src/: main.rs
docs/src/: lib.rs
errors/src/: lib.rs  main.rs
functions/src/: main.rs
idiomatic/src/: main.rs
invaders/src/: frame.rs  invaders.rs  main.rs  player.rs  render.rs  shot.rs
logging/src/: lib.rs
ownership_references/src/: main.rs
rusty_engine_tutorial/: Cargo.toml
rusty_engine_tutorial/assets/: cute-ferris.collider
rusty_engine_tutorial/src/: main.rs
simple_types/src/: lib.rs  main.rs
structs_traits/src/: main.rs
testing/: Cargo.toml
testing/benches/: benchmark.rs
testing/src/: lib.rs
testing/tests/: more_tests.rs
threads_channels/src/: main.rs
traits/src/: main.rs
variables/src/: main.rs
