[package]
name = "rusty_engine_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_engine = "5.0"
rand = "0.8"

# below are settings so I don't have to add --release to cargo build and run commands each time
[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16